--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: William Webtest's Portfolio
+title: William Webtest
 email: gitwebtest.narwa@simplelogin.com
 url: https://gitweb-test.github.io/
 description: "William Webtest's portfolio website."
 keywords: "portfolio, photoshop"
-skills: "Photo Editing - Video Editing - Graphic Design"
+skills: "Adobe Photoshop - Premiere Pro - Data Analytics"
 meta_author: William Webtest
 
 # Google webmaster tools
